Spacing Issue

--- a/theme/_/styles/style.scss
+++ b/theme/_/styles/style.scss
@@ -456,7 +456,7 @@ body.post-type-archive-works, body.archive.tag {
       max-width: 400px;
     }
     .subtitle {
-      margin-top: 2px !important;
+      margin-top: 4px !important;
       opacity: 0.4;
       // visibility: hidden;
     }
